# learnault-contracts

./: .gitignore  Cargo.toml  README.md
contracts/: .gitignore  (+1 more)
contracts/badge-nft/: Cargo.toml
contracts/badge-nft/src/: lib.rs  test.rs  types.rs
contracts/badge-nft/test_snapshots/test/: test_get_badge_count_increments.1.json  test_get_badges_returns_all_badges.1.json  test_has_badge_multiple_badges.1.json  test_has_badge_returns_false_for_other_courses.1.json  test_initialize_success.1.json  test_mint_badge_duplicate_panics.1.json  test_mint_badge_emits_event.1.json  test_mint_badge_increments_badge_count.1.json  test_mint_badge_multiple_learners_same_course.1.json
contracts/course-registry/: Cargo.toml  README.md
contracts/course-registry/src/: lib.rs  test.rs  types.rs
contracts/course-registry/test_snapshots/test/: get_progress_returns_stored_value_when_enrolled.1.json  get_progress_returns_zero_when_unenrolled.1.json  test_complete_module_different_learners.1.json  test_complete_module_emits_event.1.json  test_complete_module_exceeds_total_modules.1.json  test_complete_module_multiple_times.1.json  test_complete_module_unauthorized_verifier.1.json  test_create_and_get_course.1.json  test_create_course.1.json  test_deactivate_course.1.json  test_enroll_multiple_learners_same_course.1.json  test_enroll_same_learner_different_courses.1.json  test_enroll_success.1.json  test_get_course_exists.1.json  test_get_course_multiple_courses.1.json  test_get_course_opt_exists.1.json  test_get_progress_returns_zero_after_enroll.1.json  test_get_progress_tracks_completion.1.json  test_is_course_finished_exact_progress_returns_true.1.json  test_is_course_finished_excess_progress_returns_true.1.json  test_is_course_finished_partial_progress_returns_false.1.json  test_is_course_finished_unenrolled_returns_false.1.json  test_multiple_courses.1.json  test_reactivate_course.1.json  test_set_course_status_success.1.json  test_set_course_status_unauthorized_admin_panics.1.json  test_update_metadata_emits_event.1.json  test_update_metadata_multiple_times.1.json  test_update_metadata_success.1.json
contracts/reward-pool/: Cargo.toml
contracts/reward-pool/src/: lib.rs  test.rs  types.rs
contracts/reward-pool/test_snapshots/test/: test_add_approved_spender_success.1.json  test_add_approved_spender_wrong_admin.1.json  test_add_multiple_approved_spenders.1.json  test_add_same_spender_twice.1.json  test_distribute_reward_multiple_spenders.1.json  test_distribute_reward_multiple_times.1.json  test_distribute_reward_negative_amount.1.json  test_distribute_reward_success.1.json  test_distribute_reward_unauthorized_spender.1.json  test_fund_pool_emits_event.1.json  test_fund_pool_multiple_donors.1.json  test_fund_pool_multiple_times.1.json  test_fund_pool_success.1.json  test_fund_pool_transfers_balance.1.json  (+3 more)
(+23 files in other folders)
