[package]
name = "course-registry"
version = "0.1.0"
edition = "2021"
authors = ["Learnault Team"]
description = "Course registry contract for the Learnault platform"
license = "MIT"
repository = "https://github.com/your-org/learnault-contracts"

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true