[package]
name = "course-registry"
version = "0.1.0"
edition = "2021"
authors = ["Learnault Team"]
description = "Course registry contract for the Learnault platform"
license = "MIT"
repository = "https://github.com/your-org/learnault-contracts"

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = "21.7.7"

[dev-dependencies]
soroban-sdk = { version = "21.7.7", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
