[package]
name = "reward-pool"
version = "0.1.0"
edition = "2021"
authors = ["Learnault Team"]
description = "Reward pool contract for the Learnault platform"
license = "MIT"
repository = "https://github.com/learnault/learnault-contracts"


[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
